--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -47,6 +47,36 @@
             <h1>Taste the Experience</h1>
             <a href="#">Learn More</a>
         </div>
+        <div id="cards">
+            <div class="art">
+                <img 
+                    src="images/foodart.jpg" 
+                    alt="food art of fairy"
+                    width="200px"
+                >
+                <h3>The Art</h3>
+                <p>
+                    Click below for more details on our talented food artists, 
+                    and the process that goes into our unique dining experience.
+                </p>
+                <br>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="food">
+                <img 
+                    src="images/food1.jpg" 
+                    alt="food art with soup and rice bear"
+                    width="200px"
+                >
+                <h3>The Food</h3>
+                <p>
+                    Click below for more details on our talented chefs, and the 
+                    delicious dishes they prepare.
+                </p>
+                <br><br>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
         <div id="footer">
             <img 
                 src="images/secondary-logo-color.svg" 
