--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -98,8 +98,12 @@
                             <img 
                                 src="images/roastchick.jpg" 
                                 alt="Roasted Chicken" 
-                                width="100px"
                             >
+                            <p>
+                                Roasted Chicken with choice of 2 sides
+                                <br><br>
+                                <b>$12</b>
+                            </p>
                         </a>
                     </li>
                     <li>
@@ -108,8 +112,14 @@
                             <img 
                                 src="images/lasagna.jpg" 
                                 alt="Lasagna" 
-                                width="100px"
                             >
+                            <p>
+                                Lasagna with meat sauce and ricotta cheese, 
+                                topped with mozzerella and serced with choice 
+                                of 1 side.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
                         </a>
                     </li>
                     <li>
@@ -118,8 +128,14 @@
                             <img 
                                 src="images/steakpot.jpg" 
                                 alt="Steak and Potatos" 
-                                width="100px"
                             >
+                            <p>
+                                Sirloin steak cooked to your specification with 
+                                roasted potato slices. Served with choice of 
+                                1 side.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
                         </a>
                     </li>
                     <li>
@@ -128,8 +144,13 @@
                             <img 
                                 src="images/balschick.jpg" 
                                 alt="Balsamic Chicken" 
-                                width="100px"
                             >
+                            <p>
+                                Roasted chicken with balsamic and herb glaze. 
+                                Served with choice of 2 sides.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
                         </a>
                     </li>
                     <li>
@@ -138,8 +159,14 @@
                             <img 
                                 src="images/vegwrap.jpg" 
                                 alt="Veggie Wrap" 
-                                width="100px"
                             >
+                            <p>
+                                Mixed veggies and vegan cheeses wrapped with 
+                                lettuce. Served with choice of sauce and 
+                                2 sides.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
                         </a>
                     </li>
                     <li>
@@ -148,8 +175,13 @@
                             <img 
                                 src="images/fishchips.jpg" 
                                 alt="Fish and Chips" 
-                                width="100px"
                             >
+                            <p>
+                                Lightly breaded and seasoned cod fish. Served 
+                                with choice of sauce and fries or chips.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
                         </a>
                     </li>
                     <li>
@@ -158,9 +190,44 @@
                             <img 
                                 src="images/platter.jpg" 
                                 alt="Fruit and Veggie Platter" 
-                                width="100px"
+                            >
+                            <p>
+                                Colorful blend of fruits and veggies. 
+                                Served with dipping sauce.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <h5>Eggs & Avacado Toast</h5>
+                            <img 
+                                src="images/food1.jpg" 
+                                alt="Eggs and avacado toast"
+                            >
+                            <p>
+                                Two eggs cooked to your specification, thick 
+                                slice seasoned italian bread toasted, and sliced 
+                                avacado.
+                                <br><br>
+                                <b>$12</b>
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <h5>Beef & Veggie Stew</h5>
+                            <img 
+                                src="images/food.jpg" 
+                                alt="stew with rice bear"
                             >
                         </a>
+                        <p>
+                            Hearty stew with beef, carrots, celery, and potato.
+                            <br><br>
+                            <b>$12</b>
+                        </p>
                     </li>
                 </ul>
             </div>
