--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -59,7 +59,6 @@
                     Click below for more details on our talented food artists, 
                     and the process that goes into our unique dining experience.
                 </p>
-                <br>
                 <a href="#">Learn More</a>
             </div>
             <div class="food">
@@ -73,7 +72,6 @@
                     Click below for more details on our talented chefs, and the 
                     delicious dishes they prepare.
                 </p>
-                <br><br>
                 <a href="#">Learn More</a>
             </div>
         </div>
@@ -83,7 +81,7 @@
                 alt="Palatte and Plate logo secondary"
                 width="100px"
             >
-            <p>&copy; Palette & Plate Gallery 2025</p>
+            <p>&copy; Palette & Plate Gallery 2025 All Rights Reserved</p>
             <a href="#navbar">Back to Top</a>
         </div>
     </body>
