--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -239,7 +239,7 @@
                 alt="Palatte and Plate logo secondary"
                 width="100px"
             >
-            <p>&copy; Palette & Plate Gallery 2025</p>
+            <p>&copy; Palette & Plate Gallery 2025 All Rights Reserved</p>
             <a href="#navbar">Back to Top</a>
         </div>
     </body>
