--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -14,222 +14,246 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="navbar">
-            <a href="index.html">
-                <img
-                    class="logo" 
-                    src="images/main-logo-color.svg" 
-                    alt="Palette & Plate Gallery logo"
-                    width="120px"
-                >
-            </a>
-            <p>..where every dish is a canvas.</p>
-            <div class="drop-contain">
-                <a href="#">
-                    <i class="fa-solid fa-chevron-down"></i>
-                    <img 
-                        src="images/fork-brush-menu.svg" 
-                        alt="Fork and paint brush hamburger menu" 
-                        width="80px"
+        <div id="single">
+            <div id="navbar">
+                <a href="index.html">
+                    <img
+                        class="logo" 
+                        src="images/main-logo-color.svg" 
+                        alt="Palette & Plate Gallery logo"
+                        width="120px"
                     >
                 </a>
-                <div class="drop-menu">
-                    <a href="#">The Experience</a>
-                    <a href="#">Menu</a>
-                    <a href="#">Gift Cards</a>
-                    <a href="#">Reservations</a>
-                    <a href="#">Parties</a>
-                    <a href="#">Theme Schedule</a>
+                <p>..where every dish is a canvas.</p>
+                <div class="drop-contain">
+                    <a href="#">
+                        <i class="fa-solid fa-chevron-down"></i>
+                        <img 
+                            src="images/fork-brush-menu.svg" 
+                            alt="Fork and paint brush hamburger menu" 
+                            width="80px"
+                        >
+                    </a>
+                    <div class="drop-menu">
+                        <a href="#">The Experience</a>
+                        <a href="#">Menu</a>
+                        <a href="#">Gift Cards</a>
+                        <a href="#">Reservations</a>
+                        <a href="#">Parties</a>
+                        <a href="#">Theme Schedule</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div id="banner">
-            <h1>Choose a Theme</h1>
-            <h1>Pick your dish</h1>
-            <h3>We do the rest.</h3>
-        </div>
 
-        <div id="two-column">
-            <div class="col-1">
-                <h3>Themes</h3>
-                <div id="lists">
-                    <div class="list1">
-                        <h5>Artists</h5>
-                        <ul>
-                            <li>
-                                <a href="#">Dali</a>
-                            </li>
-                            <li>
-                                <a href="#">Carvaggio</a>
-                            </li>
-                            <li>
-                                <a href="#">Warhol</a>
-                            </li>
-                            <li>
-                                <a href="#">Picasso</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="list2">
-                        <h5>Styles</h5>
-                        <ul>
-                            <li>
-                                <a href="#">Abstract</a>
-                            </li>
-                            <li>
-                                <a href="#">Art Deco</a>
-                            </li>
-                            <li>
-                                <a href="#">Cubism</a>
-                            </li>
-                            <li>
-                                <a href="#">Surrealism</a>
-                            </li>
-                        </ul>
-                    </div>
+            <div id="banner">
+                <h1>Choose a Theme</h1>
+                <h1>Pick your dish</h1>
+                <h3>We do the rest.</h3>
+            </div>
+
+            <div id="feature">
+                <div class="block">
+                    <h1>Feature Dish</h1>
+                    <h2>Spring Feature</h2>
+                    <img 
+                        src="images/feature.jpg" 
+                        alt="pot pie with sun decoration"
+                        width="300px"
+                    >
+                    <h3>Savory Chicken & Veggie Pot Pie</h3>
+                    <p>Our featured dish to kick off the spring season is a
+                        beautiful sunny and savory pot pie. Spring may be upon us,
+                        but the comfort foods don't have to leave! This hearty pie
+                        includes chicken, carrots, celery, peas, onion, herbs, and
+                        delicious gravy - all topped with a flaky crust made from
+                        scratch.
+                    </p>
+                    <a href="#">Make a Reservation</a>
                 </div>
             </div>
-            <div class="col-2">
-                <h3>Dishes</h3>
-                <ul>
-                    <li>
-                        <a href="#">
-                            <h5>Roasted Chicken</h5>
-                            <img 
-                                src="images/roastchick.jpg" 
-                                alt="Roasted Chicken" 
-                            >
+
+            <div id="two-column">
+                <div class="col-1">
+                    <h3>Themes</h3>
+                    <div id="lists">
+                        <div class="list1">
+                            <h5>Artists</h5>
+                            <ul>
+                                <li>
+                                    <a href="#">Dali</a>
+                                </li>
+                                <li>
+                                    <a href="#">Carvaggio</a>
+                                </li>
+                                <li>
+                                    <a href="#">Warhol</a>
+                                </li>
+                                <li>
+                                    <a href="#">Picasso</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="list2">
+                            <h5>Styles</h5>
+                            <ul>
+                                <li>
+                                    <a href="#">Abstract</a>
+                                </li>
+                                <li>
+                                    <a href="#">Art Deco</a>
+                                </li>
+                                <li>
+                                    <a href="#">Cubism</a>
+                                </li>
+                                <li>
+                                    <a href="#">Surrealism</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <h3>Dishes</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <h5>Roasted Chicken</h5>
+                                <img 
+                                    src="images/roastchick.jpg" 
+                                    alt="Roasted Chicken" 
+                                >
+                                <p>
+                                    Roasted Chicken with choice of 2 sides
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h5>Lasagna Italiano</h5>
+                                <img 
+                                    src="images/lasagna.jpg" 
+                                    alt="Lasagna" 
+                                >
+                                <p>
+                                    Lasagna with meat sauce and ricotta cheese, 
+                                    topped with mozzerella and serced with choice 
+                                    of 1 side.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                            <h5>Sirloin Steak & Roasted Potatos</h5>
+                                <img 
+                                    src="images/steakpot.jpg" 
+                                    alt="Steak and Potatos" 
+                                >
+                                <p>
+                                    Sirloin steak cooked to your specification with 
+                                    roasted potato slices. Served with choice of 
+                                    1 side.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h5>Balsamic Chicken</h5>
+                                <img 
+                                    src="images/balschick.jpg" 
+                                    alt="Balsamic Chicken" 
+                                >
+                                <p>
+                                    Roasted chicken with balsamic and herb glaze. 
+                                    Served with choice of 2 sides.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h5>Veggie Wrap</h5>
+                                <img 
+                                    src="images/vegwrap.jpg" 
+                                    alt="Veggie Wrap" 
+                                >
+                                <p>
+                                    Mixed veggies and vegan cheeses wrapped with 
+                                    lettuce. Served with choice of sauce and 
+                                    2 sides.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h5>Fish & Chips</h5>
+                                <img 
+                                    src="images/fishchips.jpg" 
+                                    alt="Fish and Chips" 
+                                >
+                                <p>
+                                    Lightly breaded and seasoned cod fish. Served 
+                                    with choice of sauce and fries or chips.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h5>Fruit & Veggie Platter</h5>
+                                <img 
+                                    src="images/platter.jpg" 
+                                    alt="Fruit and Veggie Platter" 
+                                >
+                                <p>
+                                    Colorful blend of fruits and veggies. 
+                                    Served with dipping sauce.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <h5>Eggs & Avacado Toast</h5>
+                                <img 
+                                    src="images/food1.jpg" 
+                                    alt="Eggs and avacado toast"
+                                >
+                                <p>
+                                    Two eggs cooked to your specification, thick 
+                                    slice seasoned italian bread toasted, and sliced 
+                                    avacado.
+                                    <br><br>
+                                    <b>$12</b>
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <h5>Beef & Veggie Stew</h5>
+                                <img 
+                                    src="images/food.jpg" 
+                                    alt="stew with rice bear"
+                                >
+                            </a>
                             <p>
-                                Roasted Chicken with choice of 2 sides
+                                Hearty stew with beef, carrots, celery, and potato.
                                 <br><br>
                                 <b>$12</b>
                             </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <h5>Lasagna Italiano</h5>
-                            <img 
-                                src="images/lasagna.jpg" 
-                                alt="Lasagna" 
-                            >
-                            <p>
-                                Lasagna with meat sauce and ricotta cheese, 
-                                topped with mozzerella and serced with choice 
-                                of 1 side.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                        <h5>Sirloin Steak & Roasted Potatos</h5>
-                            <img 
-                                src="images/steakpot.jpg" 
-                                alt="Steak and Potatos" 
-                            >
-                            <p>
-                                Sirloin steak cooked to your specification with 
-                                roasted potato slices. Served with choice of 
-                                1 side.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <h5>Balsamic Chicken</h5>
-                            <img 
-                                src="images/balschick.jpg" 
-                                alt="Balsamic Chicken" 
-                            >
-                            <p>
-                                Roasted chicken with balsamic and herb glaze. 
-                                Served with choice of 2 sides.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <h5>Veggie Wrap</h5>
-                            <img 
-                                src="images/vegwrap.jpg" 
-                                alt="Veggie Wrap" 
-                            >
-                            <p>
-                                Mixed veggies and vegan cheeses wrapped with 
-                                lettuce. Served with choice of sauce and 
-                                2 sides.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <h5>Fish & Chips</h5>
-                            <img 
-                                src="images/fishchips.jpg" 
-                                alt="Fish and Chips" 
-                            >
-                            <p>
-                                Lightly breaded and seasoned cod fish. Served 
-                                with choice of sauce and fries or chips.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <h5>Fruit & Veggie Platter</h5>
-                            <img 
-                                src="images/platter.jpg" 
-                                alt="Fruit and Veggie Platter" 
-                            >
-                            <p>
-                                Colorful blend of fruits and veggies. 
-                                Served with dipping sauce.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <h5>Eggs & Avacado Toast</h5>
-                            <img 
-                                src="images/food1.jpg" 
-                                alt="Eggs and avacado toast"
-                            >
-                            <p>
-                                Two eggs cooked to your specification, thick 
-                                slice seasoned italian bread toasted, and sliced 
-                                avacado.
-                                <br><br>
-                                <b>$12</b>
-                            </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <h5>Beef & Veggie Stew</h5>
-                            <img 
-                                src="images/food.jpg" 
-                                alt="stew with rice bear"
-                            >
-                        </a>
-                        <p>
-                            Hearty stew with beef, carrots, celery, and potato.
-                            <br><br>
-                            <b>$12</b>
-                        </p>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
