--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -49,6 +49,10 @@
                 <h1>Choose a Theme</h1>
                 <h1>Pick your dish</h1>
                 <h3>We do the rest.</h3>
+                <a href="#jump">
+                    <i class="fa-solid fa-chevron-down"></i>
+                    Explore
+                </a>
             </div>
 
             <div id="feature">
@@ -74,7 +78,7 @@
 
             <div id="two-column">
                 <div class="col-1">
-                    <h3>Themes</h3>
+                    <h3 id="jump">Themes</h3>
                     <div id="lists">
                         <div class="list1">
                             <h5>Artists</h5>
