--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -65,7 +65,8 @@
                         width="300px"
                     >
                     <h3>Savory Chicken & Veggie Pot Pie</h3>
-                    <p>Our featured dish to kick off the spring season is a
+                    <p>
+                        Our featured dish to kick off the spring season is a
                         beautiful sunny and savory pot pie. Spring may be upon us,
                         but the comfort foods don't have to leave! This hearty pie
                         includes chicken, carrots, celery, peas, onion, herbs, and
@@ -142,8 +143,8 @@
                                 >
                                 <p>
                                     Lasagna with meat sauce and ricotta cheese, 
-                                    topped with mozzerella and serced with choice 
-                                    of 1 side.
+                                    topped with mozzerella and serced with 
+                                    choice of 1 side.
                                     <br><br>
                                     <b>$12</b>
                                 </p>
@@ -151,15 +152,15 @@
                         </li>
                         <li>
                             <a href="#">
-                            <h5>Sirloin Steak & Roasted Potatos</h5>
+                                <h5>Sirloin Steak & Roasted Potatos</h5>
                                 <img 
                                     src="images/steakpot.jpg" 
                                     alt="Steak and Potatos" 
                                 >
                                 <p>
-                                    Sirloin steak cooked to your specification with 
-                                    roasted potato slices. Served with choice of 
-                                    1 side.
+                                    Sirloin steak cooked to your specification 
+                                    with roasted potato slices. Served with 
+                                    choice of 1 side.
                                     <br><br>
                                     <b>$12</b>
                                 </p>
@@ -173,8 +174,8 @@
                                     alt="Balsamic Chicken" 
                                 >
                                 <p>
-                                    Roasted chicken with balsamic and herb glaze. 
-                                    Served with choice of 2 sides.
+                                    Roasted chicken with balsamic and herb 
+                                    glaze. Served with choice of 2 sides.
                                     <br><br>
                                     <b>$12</b>
                                 </p>
@@ -204,8 +205,9 @@
                                     alt="Fish and Chips" 
                                 >
                                 <p>
-                                    Lightly breaded and seasoned cod fish. Served 
-                                    with choice of sauce and fries or chips.
+                                    Lightly breaded and seasoned cod fish. 
+                                    Served with choice of sauce and fries or 
+                                    chips.
                                     <br><br>
                                     <b>$12</b>
                                 </p>
@@ -235,8 +237,8 @@
                                 >
                                 <p>
                                     Two eggs cooked to your specification, thick 
-                                    slice seasoned italian bread toasted, and sliced 
-                                    avacado.
+                                    slice seasoned italian bread toasted, and 
+                                    sliced avacado.
                                     <br><br>
                                     <b>$12</b>
                                 </p>
@@ -251,7 +253,8 @@
                                 >
                             </a>
                             <p>
-                                Hearty stew with beef, carrots, celery, and potato.
+                                Hearty stew with beef, carrots, celery, and 
+                                potato.
                                 <br><br>
                                 <b>$12</b>
                             </p>
