--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -67,11 +67,11 @@
                     <h3>Savory Chicken & Veggie Pot Pie</h3>
                     <p>
                         Our featured dish to kick off the spring season is a
-                        beautiful sunny and savory pot pie. Spring may be upon us,
-                        but the comfort foods don't have to leave! This hearty pie
-                        includes chicken, carrots, celery, peas, onion, herbs, and
-                        delicious gravy - all topped with a flaky crust made from
-                        scratch.
+                        beautiful sunny and savory pot pie. Spring may be upon 
+                        us, but the comfort foods don't have to leave! This 
+                        hearty pie includes chicken, carrots, celery, peas, 
+                        onion, herbs, and delicious gravy - all topped with a 
+                        flaky crust made from scratch.
                     </p>
                     <a href="#">Make a Reservation</a>
                 </div>
